// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add and get nodes from the cache 1`] = `
Object {
  "node/8548730": Object {
    "lat": "38.9005771",
    "lon": "-77.0224428",
    "tags": null,
    "version": "2",
    "ways": null,
  },
  "node/8548853": Object {
    "lat": "38.8998216",
    "lon": "-77.0219243",
    "tags": null,
    "version": "1",
    "ways": null,
  },
  "node/8548854": Object {
    "lat": "38.8998216",
    "lon": "-77.0219243",
    "tags": null,
    "version": "1",
    "ways": null,
  },
  "node/8548856": Object {
    "lat": "38.9008903",
    "lon": "-77.0219297",
    "tags": null,
    "version": "1",
    "ways": null,
  },
  "node/8548857": Object {
    "lat": "38.9021135",
    "lon": "-77.0219297",
    "tags": null,
    "version": "1",
    "ways": null,
  },
  "node/8548858": Object {
    "lat": "38.9021135",
    "lon": "-77.0219297",
    "tags": null,
    "version": "1",
    "ways": null,
  },
  "node/8548859": Object {
    "lat": "38.9028942",
    "lon": "-77.0218653",
    "tags": null,
    "version": "1",
    "ways": null,
  },
}
`;

exports[`get nodes for a tile 1`] = `
Array [
  "node/8548730",
  "node/8548853",
  "node/8548854",
  "node/8548856",
  "node/8548857",
  "node/8548858",
  "node/8548859",
]
`;

exports[`get nodes for an array of tiles 1`] = `
Object {
  "0320100322313212": Object {
    "node/8548730": Object {
      "lat": "38.9005771",
      "lon": "-77.0224428",
      "tags": null,
      "version": "2",
      "ways": null,
    },
    "node/8548853": Object {
      "lat": "38.8998216",
      "lon": "-77.0219243",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548854": Object {
      "lat": "38.8998216",
      "lon": "-77.0219243",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548856": Object {
      "lat": "38.9008903",
      "lon": "-77.0219297",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548857": Object {
      "lat": "38.9021135",
      "lon": "-77.0219297",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548858": Object {
      "lat": "38.9021135",
      "lon": "-77.0219297",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548859": Object {
      "lat": "38.9028942",
      "lon": "-77.0218653",
      "tags": null,
      "version": "1",
      "ways": null,
    },
  },
  "0320100322313213": Object {
    "node/8548730": Object {
      "lat": "38.9005771",
      "lon": "-77.0224428",
      "tags": null,
      "version": "2",
      "ways": null,
    },
    "node/8548853": Object {
      "lat": "38.8998216",
      "lon": "-77.0219243",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548854": Object {
      "lat": "38.8998216",
      "lon": "-77.0219243",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548856": Object {
      "lat": "38.9008903",
      "lon": "-77.0219297",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548857": Object {
      "lat": "38.9021135",
      "lon": "-77.0219297",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548858": Object {
      "lat": "38.9021135",
      "lon": "-77.0219297",
      "tags": null,
      "version": "1",
      "ways": null,
    },
    "node/8548859": Object {
      "lat": "38.9028942",
      "lon": "-77.0218653",
      "tags": null,
      "version": "1",
      "ways": null,
    },
  },
}
`;

exports[`remove nodes for a tile 1`] = `null`;

exports[`remove nodes for a tile 2`] = `
Object {
  "node/8548730": null,
  "node/8548853": null,
  "node/8548854": null,
  "node/8548856": null,
  "node/8548857": null,
  "node/8548858": null,
  "node/8548859": null,
}
`;
